--- a/app/containers/home/components/logined/style.css
+++ b/app/containers/home/components/logined/style.css
@@ -1,5 +1,5 @@
 .container{
-    height: 300px;
+    /* height: 70%; */
     width: 285px;
     display: flex;
     align-items: center;
@@ -20,6 +20,12 @@
     width: 27%;
     margin-top: 20px;
 }
+
 .centerP{
     margin:25px 0;
+}
+
+.button{    
+    width: 30%;
+    margin: 0px;
 }
